--- a/styles/main.css
+++ b/styles/main.css
@@ -6159,6 +6159,7 @@ hr {
   --card-border-radius: 0.5rem;
   --card-padding-y: 0.75rem;
   transition: box-shadow 300ms;
+  height: 420px;
 }
 .explore-properties-item:hover {
   box-shadow: 0 0.375rem 1rem 0 rgba(0, 0, 0, 0.05);
