--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,8 @@
   * Version: 1.0.0
   * 
   **/
-  @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+  /* @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap'); */
+  @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 /*!
  * Bootstrap Grid v5.3.1 (https://getbootstrap.com/)
@@ -4203,7 +4204,7 @@ html {
 }
 
 body {
-  font-family: "Plus Jakarta Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-weight: 400;
   font-size: 1rem;
   color: #0d001d;
@@ -4223,7 +4224,7 @@ h5,
 .h5,
 h6,
 .h6 {
-  font-family: "Plus Jakarta Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-weight: 700;
   margin-bottom: 0.75rem;
   color: #0d001d;
@@ -4330,7 +4331,7 @@ a,
 button,
 input,
 textarea {
-  font-family: "Plus Jakarta Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-size: 1rem;
 }
 
@@ -4735,7 +4736,7 @@ hr {
 .form-group {
   --input-padding-x: 1.25rem;
   --input-padding-y: 0.875rem;
-  --input-font-family: "Plus Jakarta Sans", sans-serif;
+  --input-font-family: "DM Sans", sans-serif;
   --input-font-size: 0.875rem;
   --input-font-weight: 400;
   --input-line-height: 1.5;
@@ -5532,7 +5533,8 @@ hr {
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
-  background-image: linear-gradient(180deg, #ffffff 0%, #e2edff 100%);
+  /* background-image: linear-gradient(180deg, #ffffff 0%, #e2edff 100%); */
+  background-color: #fff;
 }
 @media (max-width: 991.98px) {
   .navbar-main .container {
@@ -5722,7 +5724,7 @@ hr {
 }
 .footer-main .h4 {
   color: #ffffff;
-  font-family: "Plus Jakarta Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-weight: 400;
   margin-bottom: 2.5rem;
   position: relative;
@@ -5743,7 +5745,7 @@ hr {
   color: #ffffff;
   margin-bottom: 0.625rem;
   color: rgba(255, 255, 255, 0.75);
-  font-family: "Plus Jakarta Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-weight: 300;
   transition: 300ms;
 }
@@ -6870,7 +6872,7 @@ hr {
 .property-details-item .h4 {
   position: relative;
   z-index: 0;
-  font-family: "Plus Jakarta Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-weight: 400;
   color: #4a42ec;
   margin-bottom: 2rem;
@@ -6899,7 +6901,7 @@ hr {
   font-weight: 400;
   color: #0d001d;
   margin-bottom: 0.125rem;
-  font-family: "Plus Jakarta Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 .property-details-item .text {
   font-size: 0.875rem;
@@ -6973,7 +6975,7 @@ hr {
 }
 .property-details-sidebar .d-flex .h5 {
   margin-bottom: 0.125rem;
-  font-family: "Plus Jakarta Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-weight: 400;
   color: #4f5465;
 }
@@ -7259,7 +7261,7 @@ hr {
 .contact-info-item .h5 {
   color: #4a42ec;
   margin-bottom: 0.375rem;
-  font-family: "Plus Jakarta Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-weight: 500;
 }
 .contact-info-desc {
