--- a/styles/main.css
+++ b/styles/main.css
@@ -4399,14 +4399,14 @@ ol {
   }
 }
 .section-desc {
-  font-size: 1.25rem;
+  font-size: 1.12rem;
   font-weight: 300;
   margin-bottom: 2rem;
   color: #4f5465;
 }
 @media (min-width: 992px) {
   .section-desc {
-    font-size: 1.375rem;
+    font-size: 1.18rem;
   }
 }
 .section-img {
@@ -6175,7 +6175,9 @@ hr {
   justify-content: center;
 }
 .explore-properties-item .h5 {
-  margin-bottom: 0.375rem;
+  margin-bottom: 0.575rem;
+  font-weight: 700;
+  font-size: 1.4rem;
 }
 .explore-properties-thumbnail {
   position: relative;
@@ -6243,7 +6245,7 @@ hr {
 .explore-properties-desc {
   color: #4f5465;
   font-weight: 300;
-  font-size: 0.875rem;
+  font-size: 1.1rem;
   margin-bottom: 1rem;
 }
 .explore-properties-facilities {
