update about page

--- a/styles/main.css
+++ b/styles/main.css
@@ -1673,6 +1673,9 @@
   padding-top: 3rem !important;
 }
 
+.mt-10 {
+  margin-top: 5rem !important;
+}
 .mt-20 {
   margin-top: 10rem !important;
 }
