--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,24 @@
-/*!
-  * Template Name: Upside Real Estate Html Template
-  * Author: Notionhive
-  * Description: Upside is a sleek and modern HTML template designed exclusively for the real estate industry. 
-  * Whether you're a real estate agency, property developer, or a realtor looking to showcase your listings online,
-  * Upside is the perfect solution. This beautifully crafted template combines stunning visuals with powerful
-  * functionality to create a remarkable online presence for your real estate business.
-  * Version: 1.0.0
-  * 
-  **/
-  /* @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap'); */
-  @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
+  /* @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap'); */
+  /* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap'); */
+
+  @font-face {
+    font-family: 'Exo';
+    src: url('../assets/fonts/Exo-Bold.ttf') format('truetype');
+    font-weight: 700; /* Bold */
+  }
+  
+  @font-face {
+    font-family: 'Exo';
+    src: url('../assets/fonts/Exo-Medium.ttf') format('truetype');
+    font-weight: 500; /* Medium */
+  }
+  
+  @font-face {
+    font-family: 'Exo';
+    src: url('../assets/fonts/Exo-Regular.ttf') format('truetype');
+    font-weight: 400; /* Regular */
+  }
 /*!
  * Bootstrap Grid v5.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
@@ -4207,7 +4215,7 @@ html {
 }
 
 body {
-  font-family: "DM Sans", sans-serif;
+  font-family: "Exo", sans-serif;
   font-weight: 400;
   font-size: 1rem;
   color: #0d001d;
@@ -4227,7 +4235,7 @@ h5,
 .h5,
 h6,
 .h6 {
-  font-family: "DM Sans", sans-serif;
+  font-family: "Exo", sans-serif;
   font-weight: 700;
   margin-bottom: 0.75rem;
   color: #0d001d;
@@ -4334,7 +4342,7 @@ a,
 button,
 input,
 textarea {
-  font-family: "DM Sans", sans-serif;
+  font-family: "Exo", sans-serif;
   font-size: 1rem;
 }
 
@@ -4739,7 +4747,7 @@ hr {
 .form-group {
   --input-padding-x: 1.25rem;
   --input-padding-y: 0.875rem;
-  --input-font-family: "DM Sans", sans-serif;
+  --input-font-family: "Exo", sans-serif;
   --input-font-size: 0.875rem;
   --input-font-weight: 400;
   --input-line-height: 1.5;
@@ -5727,7 +5735,7 @@ hr {
 }
 .footer-main .h4 {
   color: #ffffff;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Exo", sans-serif;
   font-weight: 400;
   margin-bottom: 2.5rem;
   position: relative;
@@ -5748,7 +5756,7 @@ hr {
   color: #ffffff;
   margin-bottom: 0.625rem;
   color: rgba(255, 255, 255, 0.75);
-  font-family: "DM Sans", sans-serif;
+  font-family: "Exo", sans-serif;
   font-weight: 300;
   transition: 300ms;
 }
@@ -6877,7 +6885,7 @@ hr {
 .property-details-item .h4 {
   position: relative;
   z-index: 0;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Exo", sans-serif;
   font-weight: 400;
   color: #000066;
   margin-bottom: 2rem;
@@ -6906,7 +6914,7 @@ hr {
   font-weight: 400;
   color: #0d001d;
   margin-bottom: 0.125rem;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Exo", sans-serif;
 }
 .property-details-item .text {
   font-size: 0.875rem;
@@ -6980,7 +6988,7 @@ hr {
 }
 .property-details-sidebar .d-flex .h5 {
   margin-bottom: 0.125rem;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Exo", sans-serif;
   font-weight: 400;
   color: #4f5465;
 }
@@ -7266,7 +7274,7 @@ hr {
 .contact-info-item .h5 {
   color: #000066;
   margin-bottom: 0.375rem;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Exo", sans-serif;
   font-weight: 500;
 }
 .contact-info-desc {
