--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 
   /* @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap'); */
   /* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap'); */
+  @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
   @font-face {
     font-family: 'Exo';
@@ -4215,7 +4216,7 @@ html {
 }
 
 body {
-  font-family: "Exo", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 1rem;
   color: #0d001d;
@@ -4235,7 +4236,7 @@ h5,
 .h5,
 h6,
 .h6 {
-  font-family: "Exo", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 700;
   margin-bottom: 0.75rem;
   color: #0d001d;
@@ -4342,7 +4343,7 @@ a,
 button,
 input,
 textarea {
-  font-family: "Exo", sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 1rem;
 }
 
@@ -4747,7 +4748,7 @@ hr {
 .form-group {
   --input-padding-x: 1.25rem;
   --input-padding-y: 0.875rem;
-  --input-font-family: "Exo", sans-serif;
+  --input-font-family: "Inter", sans-serif;
   --input-font-size: 0.875rem;
   --input-font-weight: 400;
   --input-line-height: 1.5;
@@ -5529,10 +5530,12 @@ hr {
   left: 0;
   width: 100%;
   z-index: 1030;
+  font-family: "Inter", sans-serif;
 }
 @media (min-width: 992px) {
   .header-main {
     padding-top: 1rem;
+    font-family: "Inter", sans-serif;
   }
 }
 
@@ -5546,15 +5549,18 @@ hr {
   gap: 1rem;
   /* background-image: linear-gradient(180deg, #ffffff 0%, #e2edff 100%); */
   background-color: #fff;
+  font-family: "Inter", sans-serif;
 }
 @media (max-width: 991.98px) {
   .navbar-main .container {
     max-width: 100%;
+    font-family: "Inter", sans-serif;
   }
 }
 @media (min-width: 992px) {
   .navbar-main .container {
     border-radius: 0.5rem;
+    font-family: "Inter", sans-serif;
   }
 }
 .navbar-toggle {
@@ -5735,7 +5741,7 @@ hr {
 }
 .footer-main .h4 {
   color: #ffffff;
-  font-family: "Exo", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
   margin-bottom: 2.5rem;
   position: relative;
@@ -5756,7 +5762,7 @@ hr {
   color: #ffffff;
   margin-bottom: 0.625rem;
   color: rgba(255, 255, 255, 0.75);
-  font-family: "Exo", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 300;
   transition: 300ms;
 }
@@ -6885,7 +6891,7 @@ hr {
 .property-details-item .h4 {
   position: relative;
   z-index: 0;
-  font-family: "Exo", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
   color: #000066;
   margin-bottom: 2rem;
@@ -6914,7 +6920,7 @@ hr {
   font-weight: 400;
   color: #0d001d;
   margin-bottom: 0.125rem;
-  font-family: "Exo", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 .property-details-item .text {
   font-size: 0.875rem;
@@ -6988,7 +6994,7 @@ hr {
 }
 .property-details-sidebar .d-flex .h5 {
   margin-bottom: 0.125rem;
-  font-family: "Exo", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
   color: #4f5465;
 }
@@ -7274,7 +7280,7 @@ hr {
 .contact-info-item .h5 {
   color: #000066;
   margin-bottom: 0.375rem;
-  font-family: "Exo", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 500;
 }
 .contact-info-desc {
