--- a/styles/main.css
+++ b/styles/main.css
@@ -5530,12 +5530,12 @@ hr {
   left: 0;
   width: 100%;
   z-index: 1030;
-  font-family: "Inter", sans-serif;
+  font-family: "Exo", sans-serif;
 }
 @media (min-width: 992px) {
   .header-main {
     padding-top: 1rem;
-    font-family: "Inter", sans-serif;
+    font-family: "Exo", sans-serif;
   }
 }
 
@@ -5549,18 +5549,18 @@ hr {
   gap: 1rem;
   /* background-image: linear-gradient(180deg, #ffffff 0%, #e2edff 100%); */
   background-color: #fff;
-  font-family: "Inter", sans-serif;
+  font-family: "Exo", sans-serif;
 }
 @media (max-width: 991.98px) {
   .navbar-main .container {
     max-width: 100%;
-    font-family: "Inter", sans-serif;
+    font-family: "Exo", sans-serif;
   }
 }
 @media (min-width: 992px) {
   .navbar-main .container {
     border-radius: 0.5rem;
-    font-family: "Inter", sans-serif;
+    font-family: "Exo", sans-serif;
   }
 }
 .navbar-toggle {
@@ -5617,6 +5617,7 @@ hr {
   padding: 1rem;
   background-image: linear-gradient(180deg, #e2edff 0%, #ffffff 100%);
   overflow: hidden auto;
+  font-family: "Exo", sans-serif;
 }
 @media (min-width: 992px) {
   .navbar-collapse {
@@ -5628,6 +5629,7 @@ hr {
     top: auto;
     position: static;
     background-image: none;
+    font-family: "Exo", sans-serif;
   }
 }
 .navbar-collapse.show {
@@ -5637,16 +5639,19 @@ hr {
   display: flex;
   flex-direction: column;
   gap: 0.5rem 3rem;
+  font-family: "Exo", sans-serif;
 }
 @media (min-width: 992px) {
   .navbar-nav {
     align-items: center;
     flex-direction: row;
+    font-family: "Exo", sans-serif;
   }
 }
 .navbar-nav .btn-cta {
   padding: 0.25rem 0.375rem 0.25rem 0.25rem;
   border-radius: 50rem;
+  font-family: "Exo", sans-serif;
 }
 .navbar-nav .btn-cta .icon {
   flex-shrink: 0;
@@ -5666,12 +5671,14 @@ hr {
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
+    font-family: "Exo", sans-serif;
   }
   .navbar-nav .dropdown-menu {
     position: static;
     top: auto;
     left: auto;
     grid-template-rows: 0fr;
+    font-family: "Exo", sans-serif;
   }
   .navbar-nav .dropdown-menu > * {
     overflow: hidden;
@@ -5690,6 +5697,7 @@ hr {
   .navbar-nav .nav-link, .navbar-nav .dropdown-link {
     width: 100%;
     justify-content: space-between;
+    font-family: "Exo", sans-serif;
   }
 }
 
@@ -5697,6 +5705,7 @@ hr {
   display: flex;
   position: relative;
   z-index: 0;
+  font-family: "Exo", sans-serif;
 }
 .nav-item:not(.nav-item-cta)::before {
   content: "";
